--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,5 +22,13 @@ services:
     depends_on:
       - db
 
+  frontend:
+    build: ./frontend
+    container_name: dev-chessbattle-frontend
+    volumes:
+      - ./frontend:/app
+    ports:
+      - "5173:5173"
+
 volumes:
   db_data:
