stockage avatar sur le systeme de fichier du srv via /uploads

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     env_file: ./backend/.env
     volumes:
       - ./backend:/app
+      - backend_uploads:/app/uploads
     ports:
       - "4000:4000"
       - "51212:51212"
@@ -32,3 +33,4 @@ services:
 
 volumes:
   db_data:
+  backend_uploads:
