--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,14 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^25.0.2",
     "@types/pg": "^8.16.0",
     "nodemon": "^3.1.11",
-    "prisma": "^7.1.0"
+    "prisma": "^7.1.0",
+    "socket.io-client": "^4.8.3"
   }
 }
