--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "prisma:studio": "prisma studio --browser none"
+    "prisma:studio": "prisma studio --browser none",
+    "seed": "node prisma/seed/index.js",
+    "migrate": "npx prisma db push"
   },
   "keywords": [],
   "author": "",
