Déploiement DOCKER OK

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "start": "node src/server.js",
     "prisma:studio": "prisma studio --browser none",
     "seed": "node prisma/seed/index.js",
-    "migrate": "npx prisma db push"
+    "migrate": "npx prisma db push",
+    "prismagenerate": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
