--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-NODE_ENV=development
-PORT=4000
+NODE_ENV=ex
+PORT=2635
 
-DB_HOST=db
-DB_PORT=5432
-POSTGRES_USER=project_chess_user
-POSTGRES_PASSWORD=project_chess_pass
-POSTGRES_DB=project_chess_db
-DATABASE_URL=postgresql://project_chess_user:project_chess_pass@db:5432/project_chess_db
+DB_HOST=x
+DB_PORT=8979
+POSTGRES_USER=unuser
+POSTGRES_PASSWORD=unpass
+POSTGRES_DB=ladb
+DATABASE_URL=postgresql://unuser:unpass@db:2635/ladb
 
 JWT_SECRET=change_me
 JWT_REFRESH_SECRET=change_me
@@ -17,11 +17,8 @@ FRONTEND_ORIGIN=http://localhost:5173
 RESET_PASSWORD_URL=http://localhost:5173/reset-password
 
 SMTP_HOST=smtp.example.com
-SMTP_PORT=465
+SMTP_PORT=4099
 SMTP_USER=example@example.com
 SMTP_PASS=change_me
 MAIL_FROM=example@example.com
 
-MATCH_DURATION_MS=120000
-MATCH_TIMER_TICK_MS=1000
-MATCH_SUBMIT_MIN_INTERVAL_MS=300
